--- a/userinfo/static/css/indexStylesheet.css
+++ b/userinfo/static/css/indexStylesheet.css
@@ -25,7 +25,6 @@ body{
 }
 
 .container{
-  max-width: 1200px;
 }
 
 .thankscard{
