--- a/userinfo/static/css/teamrate.css
+++ b/userinfo/static/css/teamrate.css
@@ -21,7 +21,6 @@
     cursor: auto;
   }
   .wrapper{
-      width: 100rem;
       margin: 0 auto;
   }
   .card:hover{
